License and stuff

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "stock-scrape"
 version = "0.1.0"
 edition = "2021"
+description = "A simple stock scraper"
+license = "CC"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
