--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 description = "A simple stock scraper"
 license = "CC"
+repository = "https://github.com/opfromthestart/stock-scrape"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
